including the image in the header landmark

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <title>Frontend Mentor | Tip calculator app</title>
   </head>
   <body>
-    <!--logo-->
-    <img src="./images/logo.svg" class="logo" alt="logo" />
+    <header>
+      <!--logo-->
+      <img src="./images/logo.svg" class="logo" alt="logo" />
+    </header>
 
     <!--main-->
     <main class="main">
