--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 
         <!--select tip-->
         <div class="tip-container">
-          <label class="label label--select" for="label--select"
-            >Select Tip %</label
-          >
-
           <fieldset class="button-list">
+            <legend class="label">Select Tip %</legend>
+
             <input
               id="percent-5"
               name="tip-percentage"
+              class="sr-only"
               type="radio"
               value="5%"
+              class="sr-only"
             />
             <label class="tip-button" for="percent-5">5%</label>
 
@@ -62,6 +62,7 @@
               id="percent-10"
               type="radio"
               name="tip-percentage"
+              class="sr-only"
               value="10%"
             />
             <label class="tip-button" for="percent-10">10%</label>
@@ -70,6 +71,7 @@
               id="percent-15"
               type="radio"
               name="tip-percentage"
+              class="sr-only"
               value="15%"
             />
             <label class="tip-button" for="percent-15">15%</label>
@@ -78,6 +80,7 @@
               id="percent-25"
               type="radio"
               name="tip-percentage"
+              class="sr-only"
               value="25%"
             />
             <label class="tip-button" for="percent-25">25%</label>
@@ -86,9 +89,12 @@
               id="percent-50"
               type="radio"
               name="tip-percentage"
+              class="sr-only"
               value="50%"
             />
             <label class="tip-button" for="percent-50">50%</label>
+
+            <label class="sr-only" for="label--select">Enter the Tip</label>
 
             <input
               type="number"
